--- a/package.json
+++ b/package.json
@@ -15,25 +15,31 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@astrajs/rest": "^0.3.4",
+    "@datastax/astra-db-ts": "^1.5.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "debug": "^4.3.7",
     "expo": "~52.0.11",
     "expo-blur": "~14.0.1",
-    "expo-constants": "~17.0.3",
+    "expo-constants": "^17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.9",
+    "expo-router": "^3.1.0",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
+    "ora": "^8.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
@@ -47,6 +53,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
